# Figures

./: CMakeLists.txt  Figure.cpp  Figure.h  main.cpp
figures/: Circle.cpp  Circle.h  Ellipse.cpp  Ellipse.h  IsoscelesTriangle.cpp  IsoscelesTriangle.h  Parallelogram.cpp  Parallelogram.h  Rect.cpp  Rect.h  RightTriangle.cpp  RightTriangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
